[package]
name = "swissbank"
version = "0.0.1-alpha.1"
edition = "2021"

[dependencies]
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["cookie"] }
anyhow = { version = "1.0" }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tower-http = { version = "0.6.5", features = ["trace"] }
dioxus = { version = "0.6" }
dioxus-ssr = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = { version = "1.4" }
local-ip-address = { version = "0.6" }
hyper = { version = "1.1" }

[dev-dependencies]
axum-test = { version = "16.2.0" }
http-body-util = { version = "0.1" }
tower = { version = "0.5.1" }
